--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     let user = JSON.parse(localStorage.getItem('SURVIVAL_USER'));
 
     // --- 2. 管理员名单 (请填入你的 ID) ---
-    const ADMIN_LIST = ["Peter_YT_Bilibili_ID", "你的第二个ID"]; 
+    const ADMIN_LIST = ["Peter_YT_Bilibili", "IKUN5556"]; 
 
     // --- 3. 页面基础控制 ---
     window.openM = (id) => { 
