--- a/index.html
+++ b/index.html
@@ -2,242 +2,264 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>NEST-OS | 终端接入</title>
+    <title>TERMINAL_OVERRIDE_V4</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
+
         :root {
             --cyan: #00f2ff;
+            --cyan-glow: rgba(0, 242, 255, 0.5);
             --red: #ff3c41;
-            --dark: #020508;
-            --panel-bg: rgba(0, 242, 255, 0.05);
-            --font-main: 'Share Tech Mono', monospace;
+            --dark-deep: #020406;
+            --panel-border: rgba(0, 242, 255, 0.15);
         }
 
-        * { cursor: crosshair; }
-
-        body {
-            background-color: var(--dark);
+        body, html {
+            margin: 0; padding: 0;
+            background: var(--dark-deep);
             color: var(--cyan);
-            font-family: var(--font-main), "Microsoft YaHei";
-            margin: 0;
-            height: 100vh;
+            font-family: 'Share Tech Mono', monospace;
             overflow: hidden;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            perspective: 1000px; /* 3D 透视 */
+            height: 100vh;
         }
 
-        /* 动态背景网格 */
-        .bg-overlay {
-            position: fixed;
-            top: 0; left: 0; width: 100%; height: 100%;
-            background: 
-                linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%),
-                linear-gradient(90deg, rgba(255, 0, 0, 0.03), rgba(0, 255, 0, 0.01), rgba(0, 0, 255, 0.03));
-            background-size: 100% 2px, 3px 100%;
-            pointer-events: none;
-            z-index: 100;
+        /* 1. 扫描线与噪点：模拟老式 CRT */
+        .crt-overlay {
+            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+            background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.1) 50%), 
+                        linear-gradient(90deg, rgba(255, 0, 0, 0.03), rgba(0, 255, 0, 0.01), rgba(0, 0, 255, 0.03));
+            background-size: 100% 3px, 3px 100%;
+            pointer-events: none; z-index: 999;
+            opacity: 0.6;
         }
 
-        .grid-bg {
-            position: fixed;
-            width: 200%; height: 200%;
-            background-image: 
-                linear-gradient(var(--panel-bg) 1px, transparent 1px),
-                linear-gradient(90deg, var(--panel-bg) 1px, transparent 1px);
-            background-size: 50px 50px;
-            transform: rotateX(60deg) translateY(-50%);
-            animation: grid-move 20s linear infinite;
-            z-index: -1;
-            opacity: 0.5;
+        /* 2. 背景 Canvas 粒子层 */
+        #canvas-bg {
+            position: fixed; top: 0; left: 0; z-index: -1;
         }
 
-        @keyframes grid-move {
-            0% { background-position: 0 0; }
-            100% { background-position: 0 500px; }
+        /* 3. 主界面 3D 浮动 */
+        .wrapper {
+            display: flex; justify-content: center; align-items: center;
+            height: 100vh; perspective: 2000px;
         }
 
-        /* 核心容器 3D 倾斜 */
-        .main-terminal {
-            width: 90vw;
-            max-width: 1300px;
-            transform: rotateY(-5deg) rotateX(5deg);
-            padding: 40px;
-            border: 1px solid rgba(0, 242, 255, 0.1);
-            background: rgba(5, 10, 15, 0.8);
-            box-shadow: 0 0 50px rgba(0, 0, 0, 1);
+        .terminal-container {
+            width: 95vw; height: 85vh;
+            background: rgba(5, 12, 18, 0.7);
+            border: 1px solid var(--panel-border);
             position: relative;
+            backdrop-filter: blur(10px);
+            box-shadow: 0 0 100px rgba(0,0,0,0.8);
+            transform: rotateX(2deg) rotateY(-1deg);
+            display: flex; flex-direction: column;
+            padding: 20px;
         }
 
-        /* 标题 Glitch 效果 */
-        .glitch-title {
-            font-size: 5rem;
-            text-align: center;
-            text-transform: uppercase;
-            letter-spacing: 20px;
-            position: relative;
-            margin-bottom: 60px;
-            text-shadow: 0.05em 0 0 var(--red), -0.025em -0.05em 0 var(--cyan);
-            animation: glitch 2s infinite;
+        /* 顶部装饰细节 */
+        .top-deco {
+            display: flex; justify-content: space-between;
+            font-size: 10px; letter-spacing: 2px;
+            border-bottom: 1px solid var(--panel-border);
+            padding-bottom: 10px; margin-bottom: 30px;
         }
 
-        @keyframes glitch {
-            0% { text-shadow: 0.05em 0 0 var(--red), -0.025em -0.05em 0 var(--cyan); }
-            14% { text-shadow: 0.05em 0 0 var(--red), -0.025em -0.05em 0 var(--cyan); }
-            15% { text-shadow: -0.05em -0.025em 0 var(--red), 0.025em 0.05em 0 var(--cyan); }
-            49% { text-shadow: -0.05em -0.025em 0 var(--red), 0.025em 0.05em 0 var(--cyan); }
-            50% { text-shadow: 0.025em 0.05em 0 var(--red), 0.05em 0 0 var(--cyan); }
-            100% { text-shadow: -0.025em 0 0 var(--red), -0.025em -0.025em 0 var(--cyan); }
-        }
-
-        /* 交互按钮 */
-        .menu-grid {
+        /* 核心卡片设计 */
+        .grid-menu {
             display: grid;
             grid-template-columns: repeat(4, 1fr);
-            gap: 20px;
+            gap: 15px; flex-grow: 1;
         }
 
-        .btn {
-            background: rgba(0, 242, 255, 0.05);
-            border: 1px solid var(--cyan);
-            padding: 25px 15px;
-            text-align: left;
+        .item-card {
+            border: 1px solid var(--panel-border);
             position: relative;
+            padding: 20px;
+            background: linear-gradient(135deg, rgba(0,242,255,0.02) 0%, transparent 100%);
+            transition: 0.3s;
             overflow: hidden;
-            transition: all 0.2s;
+            display: flex; flex-direction: column; justify-content: flex-end;
         }
 
-        .btn:hover {
-            background: var(--cyan);
-            color: var(--dark);
-            box-shadow: 0 0 30px var(--cyan);
-            transform: scale(1.05);
+        .item-card::before {
+            content: ""; position: absolute; top: 0; left: 0;
+            width: 100%; height: 2px;
+            background: linear-gradient(90deg, var(--cyan), transparent);
+            transform: translateX(-100%);
+            transition: 0.5s;
         }
 
-        .btn .label { font-size: 1.4rem; font-weight: bold; display: block; }
-        .btn .sub { font-size: 0.7rem; opacity: 0.7; text-transform: uppercase; }
+        .item-card:hover::before { transform: translateX(0); }
 
-        /* 右下角装饰 */
-        .system-info {
-            position: absolute;
-            bottom: -50px; right: 0;
-            font-size: 0.7rem;
-            text-align: right;
-            opacity: 0.5;
+        .item-card:hover {
+            background: rgba(0, 242, 255, 0.08);
+            border-color: var(--cyan);
+            box-shadow: inset 0 0 20px rgba(0, 242, 255, 0.1);
+        }
+
+        .item-card .label { font-size: 1.5rem; text-shadow: 0 0 8px var(--cyan-glow); }
+        .item-card .code { font-size: 9px; opacity: 0.5; margin-top: 5px; }
+
+        /* 特殊：红色警报区 */
+        .danger-zone { border-color: rgba(255, 60, 65, 0.3); }
+        .danger-zone:hover { border-color: var(--red); box-shadow: inset 0 0 20px rgba(255, 60, 65, 0.2); }
+        .danger-zone .label { color: var(--red); text-shadow: 0 0 8px var(--red); }
+
+        /* 底部状态栏细节 */
+        .bottom-bar {
+            margin-top: 20px; font-size: 10px;
+            display: flex; justify-content: space-between;
+            border-top: 1px solid var(--panel-border);
+            padding-top: 10px;
         }
 
         /* 启动遮罩 */
-        #overlay {
-            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-            background: black; z-index: 1000;
+        #boot-screen {
+            position: fixed; inset: 0; background: #000; z-index: 10000;
             display: flex; justify-content: center; align-items: center;
-            flex-direction: column;
+            color: var(--cyan); cursor: pointer;
         }
     </style>
 </head>
 <body>
 
-    <div id="overlay">
-        <button onclick="startSystem()" style="background:none; border: 1px solid var(--cyan); color: var(--cyan); padding: 20px 40px; font-size: 1.5rem; cursor: pointer;">
-            初始化系统 (INIT_SESSION)
-        </button>
-        <p style="margin-top: 20px; font-size: 0.8rem; letter-spacing: 2px;">检测到未授权接入...</p>
+    <div id="boot-screen" onclick="initSystem()">
+        <div id="boot-text">[ 点击初始化神经链路 ]</div>
     </div>
 
-    <div class="bg-overlay"></div>
-    <div class="grid-bg"></div>
+    <div class="crt-overlay"></div>
+    <canvas id="canvas-bg"></canvas>
 
-    <div class="main-terminal">
-        <div class="glitch-title">生存法则</div>
+    <div class="wrapper">
+        <main class="terminal-container">
+            <div class="top-deco">
+                <div>SYS_REF: 00-X92 // LOCALHOST</div>
+                <div id="real-time">00:00:00</div>
+                <div>ENCRYPTION: AES-256-GCM</div>
+            </div>
 
-        <div class="menu-grid">
-            <div class="btn" onmouseover="playHover()">
-                <span class="label">全服聊天</span>
-                <span class="sub">Comm_Channel_Active</span>
+            <div class="grid-menu">
+                <div class="item-card" onmouseenter="beep()">
+                    <div class="label">全服聊天</div>
+                    <div class="code">CHANNEL_ID: 882.global</div>
+                </div>
+                <div class="item-card" onmouseenter="beep()">
+                    <div class="label">物资交易</div>
+                    <div class="code">MARKET_P2P_ACTIVE</div>
+                </div>
+                <div class="item-card" onmouseenter="beep()">
+                    <div class="label">加密私聊</div>
+                    <div class="code">SECURE_TUNNEL_ESTABLISHED</div>
+                </div>
+                <div class="item-card danger-zone" onmouseenter="warn()">
+                    <div class="label">管理终端</div>
+                    <div class="code">ROOT_OVERRIDE_REQUIRED</div>
+                </div>
+                <div class="item-card" onmouseenter="beep()">
+                    <div class="label">补给同步</div>
+                    <div class="code">LAST_SYNC: 4m AGO</div>
+                </div>
+                <div class="item-card" onmouseenter="beep()">
+                    <div class="label">荣誉排行</div>
+                    <div class="code">CALCULATING_RANK...</div>
+                </div>
+                <div class="item-card" onmouseenter="beep()">
+                    <div class="label">协议激活</div>
+                    <div class="code">KEY_WAITING...</div>
+                </div>
+                <div class="item-card" onmouseenter="beep()">
+                    <div class="label">生存指南</div>
+                    <div class="code">DOC_REV_4.2</div>
+                </div>
             </div>
-            <div class="btn" onmouseover="playHover()">
-                <span class="label">物资交易</span>
-                <span class="sub">Resource_Exchange_V2</span>
-            </div>
-            <div class="btn" onmouseover="playHover()">
-                <span class="label">加密私聊</span>
-                <span class="sub">End-to-End_Protocol</span>
-            </div>
-            <div class="btn" onmouseover="playHover()">
-                <span class="label">同步补给</span>
-                <span class="sub">Cycle_Sync_4Hz</span>
-            </div>
-            <div class="btn" onmouseover="playHover()">
-                <span class="label">荣誉排行</span>
-                <span class="sub">Top_Tier_Ranking</span>
-            </div>
-            <div class="btn" onmouseover="playHover()">
-                <span class="label">协议激活</span>
-                <span class="sub">Cipher_Key_Input</span>
-            </div>
-            <div class="btn" onmouseover="playHover()">
-                <span class="label">指南档案</span>
-                <span class="sub">Database_Static</span>
-            </div>
-            <div class="btn admin" onmouseover="playHover()" style="border-color: var(--red);">
-                <span class="label" style="color: var(--red);">管理终端</span>
-                <span class="sub">Root_Access_Only</span>
-            </div>
-        </div>
 
-        <div class="system-info">
-            LATENCY: 12ms | CPU: 42% | MEM: 1.2GB/16GB<br>
-            LOCATION: UNKNOWN_GRID_77
-        </div>
+            <div class="bottom-bar">
+                <div>CPU_LOAD: <span id="cpu-load">0</span>%</div>
+                <div>MEM_USAGE: <span id="mem-usage">0</span>MB</div>
+                <div>CONNECTION: STABLE</div>
+                <div style="color: var(--red);">[ WARNING: NO TRACE DETECTED ]</div>
+            </div>
+        </main>
     </div>
 
     <script>
-        // Web Audio 系统
+        // --- 1. Canvas 粒子背景系统 ---
+        const canvas = document.getElementById('canvas-bg');
+        const ctx = canvas.getContext('2d');
+        let particles = [];
+
+        function initCanvas() {
+            canvas.width = window.innerWidth;
+            canvas.height = window.innerHeight;
+            for(let i=0; i<100; i++) {
+                particles.push({
+                    x: Math.random() * canvas.width,
+                    y: Math.random() * canvas.height,
+                    size: Math.random() * 2,
+                    speed: Math.random() * 0.5 + 0.1
+                });
+            }
+        }
+
+        function drawParticles() {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            ctx.fillStyle = "rgba(0, 242, 255, 0.3)";
+            particles.forEach(p => {
+                ctx.beginPath();
+                ctx.arc(p.x, p.y, p.size, 0, Math.PI*2);
+                ctx.fill();
+                p.y -= p.speed;
+                if(p.y < 0) p.y = canvas.height;
+            });
+            requestAnimationFrame(drawParticles);
+        }
+
+        // --- 2. 动态数据模拟 ---
+        setInterval(() => {
+            document.getElementById('real-time').innerText = new Date().toLocaleTimeString();
+            document.getElementById('cpu-load').innerText = (Math.random()*10 + 20).toFixed(1);
+            document.getElementById('mem-usage').innerText = Math.floor(Math.random()*200 + 800);
+        }, 1000);
+
+        // --- 3. 音频引擎 ---
         let audioCtx;
-        
         function initAudio() {
             audioCtx = new (window.AudioContext || window.webkitAudioContext)();
-            // 背景低频噪音
-            const oscillator = audioCtx.createOscillator();
-            const gainNode = audioCtx.createGain();
-            oscillator.type = 'sawtooth';
-            oscillator.frequency.setValueAtTime(40, audioCtx.currentTime); 
-            gainNode.gain.setValueAtTime(0.01, audioCtx.currentTime);
-            
-            oscillator.connect(gainNode);
-            gainNode.connect(audioCtx.destination);
-            oscillator.start();
+            // 环境底噪
+            const osc = audioCtx.createOscillator();
+            const g = audioCtx.createGain();
+            osc.type = 'triangle'; osc.frequency.value = 50;
+            g.gain.value = 0.005; 
+            osc.connect(g).connect(audioCtx.destination);
+            osc.start();
         }
 
-        function playHover() {
+        function beep() {
             if(!audioCtx) return;
-            const osc = audioCtx.createOscillator();
+            const o = audioCtx.createOscillator();
             const g = audioCtx.createGain();
-            osc.type = 'sine';
-            osc.frequency.setValueAtTime(800, audioCtx.currentTime);
-            osc.frequency.exponentialRampToValueAtTime(1200, audioCtx.currentTime + 0.1);
-            g.gain.setValueAtTime(0.1, audioCtx.currentTime);
-            g.gain.exponentialRampToValueAtTime(0.01, audioCtx.currentTime + 0.1);
-            osc.connect(g);
-            g.connect(audioCtx.destination);
-            osc.start();
-            osc.stop(audioCtx.currentTime + 0.1);
+            o.type = 'square'; o.frequency.value = 1000;
+            g.gain.setTargetAtTime(0.05, audioCtx.currentTime, 0.01);
+            g.gain.setTargetAtTime(0, audioCtx.currentTime + 0.05, 0.01);
+            o.connect(g).connect(audioCtx.destination);
+            o.start(); o.stop(audioCtx.currentTime + 0.1);
         }
 
-        function startSystem() {
-            document.getElementById('overlay').style.display = 'none';
-            initAudio();
-            // 播放一个启动音
-            const osc = audioCtx.createOscillator();
+        function warn() {
+            if(!audioCtx) return;
+            const o = audioCtx.createOscillator();
             const g = audioCtx.createGain();
-            osc.frequency.setValueAtTime(100, audioCtx.currentTime);
-            osc.frequency.exponentialRampToValueAtTime(1000, audioCtx.currentTime + 1);
-            g.gain.setTargetAtTime(0.2, audioCtx.currentTime, 0.1);
-            g.gain.setTargetAtTime(0, audioCtx.currentTime + 0.8, 0.2);
-            osc.connect(g);
-            g.connect(audioCtx.destination);
-            osc.start();
-            osc.stop(audioCtx.currentTime + 1.2);
+            o.type = 'sawtooth'; o.frequency.value = 120;
+            g.gain.setTargetAtTime(0.1, audioCtx.currentTime, 0.01);
+            g.gain.setTargetAtTime(0, audioCtx.currentTime + 0.2, 0.05);
+            o.connect(g).connect(audioCtx.destination);
+            o.start(); o.stop(audioCtx.currentTime + 0.3);
+        }
+
+        function initSystem() {
+            document.getElementById('boot-screen').style.opacity = '0';
+            setTimeout(() => document.getElementById('boot-screen').remove(), 500);
+            initCanvas(); drawParticles(); initAudio();
         }
     </script>
 </body>
